@@ -1,7 +1,3 @@
-/fill 181 85 38 150 85 75 minecraft:grass_block
-/clear
-/kubejs reload server-scripts
-/reload
 /datapack list
 /reload
 /datapack list
@@ -47,4 +43,8 @@
 /clear
 /reload
 /kubejs hand
+/clear
+/gamemode survival
+/kubejs hand
+/summon minecraft:pig
 /clear
