@@ -4,6 +4,9 @@
 		backspace_history: true
 		
 		# Default: false
+		chapter_panel_pinned: false
+		
+		# Default: false
 		old_scroll_wheel: false
 		
 		# Default: 2
