@@ -320,29 +320,52 @@
 	quest.7F0AC6B1D0CCBDE4.quest_desc: ["With &lLimestone Seeds&r, you can grow &lLimestone Essence&r, providing you with a steady supply of limestone for construction and crafting. Plant these seeds and harness the power of this durable stone without the need to mine for it."]
 	quest.7F0AC6B1D0CCBDE4.quest_subtitle: "Stone of Strength"
 	quest.7F0AC6B1D0CCBDE4.title: "Essence of Limestone"
+	task.049328BEB49A0C63.title: "Any #sophisticated:auto_smelting_upgrades"
+	task.081F16B216B3A4E0.title: "Any #sophisticated:advanced_compacting_upgrades"
 	task.09B393CC04B069E1.title: "Any #sophisticatedstorage:netherite_upgrades"
 	task.1002B199F4A7DDC3.title: "Observe a Grindstone"
 	task.111FF24730E1E06B.title: "Observe a Brewing Stand."
 	task.125C98160D57B81B.title: "Obtain Chainmail Armor from an Armorer Villager."
+	task.137E4FCCE42753C8.title: "Any #sophisticated:advanced_pickup_upgrades"
 	task.150DA982F22B0CCB.title: "Any #sophisticatedstorage:gold_storages"
 	task.154ED8DD236C5EE5.title: "Reliable Power Source for Applied Energistics 2"
+	task.159C9E809E5BBFD8.title: "Any #sophisticated:advanced_filter_upgrades"
 	task.1754E171A119F77F.title: "Obtain Diamond Armor from an Armorer."
 	task.18C58601831336A4.title: "Any #sophisticatedstorage:iron_storages"
+	task.23F9812A10B9EDCF.title: "Any #sophisticated:auto_blasting_upgrades"
+	task.25812E1A01567F7C.title: "Any #sophisticated:smoking_upgrades"
+	task.27149F550CA01926.title: "Any #curios:back"
+	task.28E2BD21ADC08C2D.title: "Any #sophisticated:blasting_upgrades"
+	task.2BB146FC3DFF7CB8.title: "Any #sophisticated:void_upgrades"
 	task.2BBABE6D3F58A4FF.title: "Any #sophisticatedstorage:diamond_upgrades"
 	task.2EC0140CC254EA63.title: "Craft a fluid storage cell."
+	task.30319FC6F26BC172.title: "Any #sophisticated:advanced_void_upgrades"
 	task.35DBF5A6561B3A66.title: "Harvest logs."
 	task.36C620A510598435.title: "Observe a Blast Furnace"
 	task.38E0BE74D0393D6D.title: "Observe a Smithing Table."
 	task.3F38B2A629773F00.title: "Any #sophisticatedstorage:gold_upgrades"
+	task.40DA8ED52BE6492A.title: "Any #sophisticated:magnet_upgrades"
 	task.410A38954F068438.title: "Any #sophisticatedstorage:iron_upgrades"
+	task.426C6EF46092E0A3.title: "Any #sophisticated:auto_smoking_upgrades"
 	task.4CDB7CBDB76C0F32.title: "go to the end"
 	task.5071C7B2EC85DAAC.title: "check this box"
 	task.522147DE7E3ED21D.title: "Any #sophisticatedstorage:base_tier_wooden_storage"
+	task.52D9230F4ED65A75.title: "Any #sophisticated:crafting_upgrades"
+	task.53C2C947DC840D17.title: "Any #sophisticated:smelting_upgrades"
+	task.5479C4378BCFF9F5.title: "Any #sophisticated:filter_upgrades"
 	task.5506F1A98B72C7B1.title: "Any #sophisticatedstorage:netherite_storages"
+	task.55108392EA23FEC5.title: "Any #sophisticated:advanced_feeding_upgrades"
+	task.5706085FFADF5FB5.title: "Any #sophisticated:compacting_upgrades"
 	task.57C3AB6C7C5750BB.title: "Obtain Iron Armor from an Armorer Villager."
 	task.59AACF98ECAB1132.title: "Any #sophisticatedstorage:diamond_storages"
 	task.5A9ADEB7C349E1CA.title: "Craft an item storage cell."
+	task.6335A2495218B5F6.title: "Any #sophisticatedstorage:upgrade"
 	task.6509A635775E13FF.title: "Rotational Energy Setup"
+	task.684423D2B76D2981.title: "Any #sophisticated:feeding_upgrades"
+	task.68703082EA0761EC.title: "Any #sophisticated:stonecutter_upgrades"
+	task.6C11616C65D7F631.title: "Any #sophisticated:pickup_upgrades"
+	task.6D73C458FCAB9A85.title: "Any #sophisticated:advanced_magnet_upgrades"
 	task.6F526BEC8B38F756.title: "Any #sophisticatedstorage:copper_storages"
+	task.77D7C9FB811D97C1.title: "Any #sophisticated:void_upgrades"
 	task.7DC414DB130CC223.title: "Craft a digital crafting storage block."
 }
